--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
 
   <body>
     <h1>
-      Hello world!
+      幸运数字预测
     </h1>
-    <button id="randomizeButton">Shuffle</button>
     <div id="randomize">
       <div class="container">
-        <h1>Randomize your stuff!</h1>
         <div class="row">
           <div class="col-sm-1">
             <div>
@@ -43,20 +41,18 @@
                   class="slotMachineContainer"
                   style="transition: all 0.4s ease-out 0s; transform: matrix(1, 0, 0, 1, 0, -500);"
                 >
-                  <div class="text-center">1</div>
-                  <div class="text-center">2</div>
-                  <div class="text-center">3</div>
-                  <div class="text-center">4</div>
-                  <div class="text-center">5</div>
-                  <div class="text-center">6</div>
-                  <div class="text-center">7</div>
-                  <div class="text-center">8</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
                 </div>
               </div>
             </div>
-            <div id="machine1Result" class="col-xs-4 machineResult">
-              Index: 5
-            </div>
+            <div id="machine1Result" class="col-xs-4 machineResult"></div>
           </div>
           <div class="col-sm-1">
             <div>
@@ -69,20 +65,18 @@
                   class="slotMachineContainer"
                   style="transition: all 0.4s ease-out 0s; transform: matrix(1, 0, 0, 1, 0, -500);"
                 >
-                  <div class="text-center">1</div>
-                  <div class="text-center">2</div>
-                  <div class="text-center">3</div>
-                  <div class="text-center">4</div>
-                  <div class="text-center">5</div>
-                  <div class="text-center">6</div>
-                  <div class="text-center">7</div>
-                  <div class="text-center">8</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
                 </div>
               </div>
             </div>
-            <div id="machine2Result" class="col-xs-4 machineResult">
-              Index: 5
-            </div>
+            <div id="machine2Result" class="col-xs-4 machineResult"></div>
           </div>
           <div class="col-sm-1">
             <div>
@@ -95,20 +89,18 @@
                   class="slotMachineContainer"
                   style="transition: all 0.4s ease-out 0s; transform: matrix(1, 0, 0, 1, 0, -500);"
                 >
-                  <div class="text-center">1</div>
-                  <div class="text-center">2</div>
-                  <div class="text-center">3</div>
-                  <div class="text-center">4</div>
-                  <div class="text-center">5</div>
-                  <div class="text-center">6</div>
-                  <div class="text-center">7</div>
-                  <div class="text-center">8</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
                 </div>
               </div>
             </div>
-            <div id="machine3Result" class="col-xs-4 machineResult">
-              Index: 5
-            </div>
+            <div id="machine3Result" class="col-xs-4 machineResult"></div>
           </div>
           <div class="col-sm-1">
             <div>
@@ -121,20 +113,18 @@
                   class="slotMachineContainer"
                   style="transition: all 0.4s ease-out 0s; transform: matrix(1, 0, 0, 1, 0, -500);"
                 >
-                  <div class="text-center">1</div>
-                  <div class="text-center">2</div>
-                  <div class="text-center">3</div>
-                  <div class="text-center">4</div>
-                  <div class="text-center">5</div>
-                  <div class="text-center">6</div>
-                  <div class="text-center">7</div>
-                  <div class="text-center">8</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
                 </div>
               </div>
             </div>
-            <div id="machine4Result" class="col-xs-4 machineResult">
-              Index: 5
-            </div>
+            <div id="machine4Result" class="col-xs-4 machineResult"></div>
           </div>
           <div class="col-sm-1">
             <div>
@@ -147,20 +137,18 @@
                   class="slotMachineContainer"
                   style="transition: all 0.4s ease-out 0s; transform: matrix(1, 0, 0, 1, 0, -500);"
                 >
-                  <div class="text-center">1</div>
-                  <div class="text-center">2</div>
-                  <div class="text-center">3</div>
-                  <div class="text-center">4</div>
-                  <div class="text-center">5</div>
-                  <div class="text-center">6</div>
-                  <div class="text-center">7</div>
-                  <div class="text-center">8</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
                 </div>
               </div>
             </div>
-            <div id="machine5Result" class="col-xs-4 machineResult">
-              Index: 5
-            </div>
+            <div id="machine5Result" class="col-xs-4 machineResult"></div>
           </div>
           <div class="col-sm-1">
             <div>
@@ -173,20 +161,18 @@
                   class="slotMachineContainer"
                   style="transition: all 0.4s ease-out 0s; transform: matrix(1, 0, 0, 1, 0, -500);"
                 >
-                  <div class="text-center">1</div>
-                  <div class="text-center">2</div>
-                  <div class="text-center">3</div>
-                  <div class="text-center">4</div>
-                  <div class="text-center">5</div>
-                  <div class="text-center">6</div>
-                  <div class="text-center">7</div>
-                  <div class="text-center">8</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
                 </div>
               </div>
             </div>
-            <div id="machine6Result" class="col-xs-4 machineResult">
-              Index: 5
-            </div>
+            <div id="machine6Result" class="col-xs-4 machineResult"></div>
           </div>
           <div class="col-sm-1">
             <div>
@@ -199,23 +185,30 @@
                   class="slotMachineContainer"
                   style="transition: all 0.4s ease-out 0s; transform: matrix(1, 0, 0, 1, 0, -500);"
                 >
-                  <div class="text-center">1</div>
-                  <div class="text-center">2</div>
-                  <div class="text-center">3</div>
-                  <div class="text-center">4</div>
-                  <div class="text-center">5</div>
-                  <div class="text-center">6</div>
-                  <div class="text-center">7</div>
-                  <div class="text-center">8</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
+                  <div class="text-center">0</div>
                 </div>
               </div>
             </div>
-            <div id="machine7Result" class="col-xs-4 machineResult">
-              Index: 5
-            </div>
+            <div id="machine7Result" class="col-xs-4 machineResult"></div>
           </div>
         </div>
       </div>
+    </div>
+    <div class="row">
+      <button
+        id="randomizeButton"
+        style="margin:auto;margin-top:50px;font-size:100px;border-radius:15px;"
+        class="btn btn-warning"
+      >
+        点击开始
+      </button>
     </div>
   </body>
 </html>
@@ -249,14 +242,57 @@
     results[this.element.id].innerText = `Index: ${this.active}`;
   }
 
+  function shuffle(arr) {
+    for (
+      var j, x, i = arr.length;
+      i;
+      j = parseInt(Math.random() * i), x = arr[--i], arr[i] = arr[j], arr[j] = x
+    );
+    return arr;
+  }
+
+  let array = [];
+  for (let i = 1; i < 49; i++) array.push(i);
+
+  const machines = [
+    machine1,
+    machine2,
+    machine3,
+    machine4,
+    machine5,
+    machine6,
+    machine7
+  ];
+  let val = "";
+  let timeout = 0;
+  let i = 1;
   btn.addEventListener("click", () => {
-    $(".text-center").text(Math.floor(Math.random() * 10 + 1));
-    machine1.shuffle(5, onComplete);
-    setTimeout(() => machine2.shuffle(5, onComplete), 1200);
-    setTimeout(() => machine3.shuffle(5, onComplete), 1200);
-    setTimeout(() => machine4.shuffle(5, onComplete), 1200);
-    setTimeout(() => machine5.shuffle(5, onComplete), 1200);
-    setTimeout(() => machine6.shuffle(5, onComplete), 1200);
-    setTimeout(() => machine7.shuffle(5, onComplete), 1200);
+    array = shuffle(array);
+    console.log("array is", array);
+    let val = "";
+    let timeout = 0;
+    let i = 1;
+    for (let m of machines) {
+      (function(i, timeout) {
+        setTimeout(() => {
+          val = $("#machine" + i).find(".text-center");
+          let count = 0;
+          for (let x of val) {
+            $(x).text(array[count + i - 1]);
+            count += 1;
+          }
+          console.log("machine is ", i);
+          m.shuffle(8, onComplete);
+        }, 400);
+      })(i, timeout);
+      // setTimeout(() => {
+      //   val = $("#machine" + i).find(".text-center");
+      //   $(val).text(array[i - 1]);
+      //   console.log("machine is ", i);
+      //   m.shuffle(5, onComplete);
+      // }, timeout);
+      timeout += 200;
+      i += 1;
+    }
   });
 </script>
