--- a/index.html
+++ b/index.html
@@ -244,7 +244,16 @@
   const machine6 = new SlotMachine(el6, { active: 5 });
   const machine7 = new SlotMachine(el7, { active: 6 });
 
-  let message_array = ["恭喜发财！万事如意！", "鼠年大吉！"];
+  let message_array = [
+    "恭喜发财！万事如意！",
+    "鼠年大吉！",
+    '祝你有"鼠"不尽的快乐！',
+    "岁岁平安、财源广进",
+    "金鼠摇摆，生活更精彩",
+    "吉祥如意庆鼠年，欢天喜地过大年",
+    "今年是鼠年，有“鼠”就有得",
+    "神龙舞动腾空去，金鼠踏着祥云到"
+  ];
 
   function onComplete(active) {
     // results[this.element.id].innerText = `Index: ${this.active}`;
